--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
     <section class="projects">
       <!-- Project 1 -->
       <div class="project">
-        <img src="https://via.placeholder.com/220x120?text=Sol's+RNG" alt="Sol's RNG">
-        <h2>Sol's RNG</h2>
-        <p>A Roblox game focused on collecting rare auras and items. Features a dynamic in-game economy and unique gameplay mechanics.</p>
-        <a href="https://www.roblox.com/games/sols-rng" target="_blank">View Project</a>
+        <img src="https://tr.rbxcdn.com/180DAY-a07d3221d64b02a7790f5007a583bcb3/256/256/Image/Webp/noFilter" alt="Tai's RNG">
+        <h2>Tai's RNG</h2>
+        <p>A Roblox game focused on collecting rare auras.</p>
+        <a href="https://www.roblox.com/games/16714905773/Tais-RNG-VALENTINE" target="_blank">View Project</a>
       </div>
       <!-- Project 2 -->
       <div class="project">
