--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Radiance | Portfolio</title>
+  <title>.radiance</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'Segoe UI', Arial, sans-serif;
@@ -97,8 +100,8 @@
 </head>
 <body>
   <header>
-    <h1>Radiance Portfolio</h1>
-    <p>Game Developer & Content Creator</p>
+    <h1>.radiance</h1>
+    <p>Leading <b>650K+ Visits</b></p>
   </header>
   <main>
     <h2 style="text-align:center; margin-bottom:2rem;">My Projects</h2>
