--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
       <!-- Project 2 -->
       <div class="project">
         <img src="https://via.placeholder.com/220x120?text=Grow+a+Garden" alt="Grow a Garden">
-        <h2>Grow a Garden</h2>
-        <p>Manage and grow your own virtual garden in Roblox. Includes asset creation, player progression, and community events.</p>
-        <a href="https://www.roblox.com/games/grow-a-garden" target="_blank">View Project</a>
+        <h2>Outfit Designer</h2>
+        <p>Design your next outfit!</p>
+        <a href="https://www.roblox.com/games/" target="_blank">View Project</a>
       </div>
       <!-- Project 3 -->
       <div class="project">
