--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
   <style>
     body {
+      font: "Inter";
       background: #f7f8fa;
       margin: 0;
       color: #222;
