--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p>Leading <b>650K+ Visits</b></p>
   </header>
   <main>
-    <h2 style="text-align:center; margin-bottom:2rem;">My Projects</h2>
+    <h2 style="text-align:center; margin-bottom:2rem;">Our Work</h2>
     <section class="projects">
       <!-- Project 1 -->
       <div class="project">
