--- a/index.html
+++ b/index.html
@@ -9,40 +9,9 @@
     @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
   </style>
 </head>
-<body>
+<body style="background-color:black;">
   <header>
     <img src="https://cdn.discordapp.com/attachments/1403020837464047656/1403703603964805170/Union_4.png?ex=6898845a&is=689732da&hm=17582da10cd1665e166c2d71ae6a2d776144a0389645170c154f05eaf6209606" alt="Branding">
-    <p>Leading <b>650K+ Visits</b></p>
   </header>
-  <main>
-    <h2 style="text-align:center; margin-bottom:2rem;">Our Work</h2>
-    <section class="projects">
-      <!-- Project 1 -->
-      <div class="project">
-        <img src="https://tr.rbxcdn.com/180DAY-a07d3221d64b02a7790f5007a583bcb3/256/256/Image/Webp/noFilter" alt="Tai's RNG">
-        <h2>Tai's RNG</h2>
-        <p>A Roblox game focused on collecting rare auras.</p>
-        <a href="https://www.roblox.com/games/16714905773/Tais-RNG-VALENTINE" target="_blank">View Project</a>
-      </div>
-      <!-- Project 2 -->
-      <div class="project">
-        <img src="https://via.placeholder.com/220x120?text=Grow+a+Garden" alt="Grow a Garden">
-        <h2>Outfit Designer</h2>
-        <p>Design your next outfit!</p>
-        <a href="https://www.roblox.com/games/" target="_blank">View Project</a>
-      </div>
-      <!-- Project 3 -->
-      <div class="project">
-        <img src="https://via.placeholder.com/220x120?text=Discord+Server" alt="Discord Server">
-        <h2>Radiance Discord Community</h2>
-        <p>Custom Discord server for game fans and developers. Features moderation bots, custom channels, and active community management.</p>
-        <a href="https://discord.gg/yourserver" target="_blank">Join Server</a>
-      </div>
-      <!-- Add more projects as needed -->
-    </section>
-  </main>
-  <footer>
-    &copy; .radiance 2025 &mdash; Find me on <a href="https://x.com/RadianceRBLX" target="_blank" style="color:#222;">@RadianceRBLX</a>
-  </footer>
 </body>
 </html>
