--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body style="background-color:black;">
   <header>
-    <img src="https://cdn.discordapp.com/attachments/1403020837464047656/1403703603964805170/Union_4.png?ex=6898845a&is=689732da&hm=17582da10cd1665e166c2d71ae6a2d776144a0389645170c154f05eaf6209606" alt="Branding">
+    <img src="https://cdn.discordapp.com/attachments/1403020837464047656/1403703603964805170/Union_4.png?ex=6898845a&is=689732da&hm=17582da10cd1665e166c2d71ae6a2d776144a0389645170c154f05eaf6209606" alt="Branding" class="center">
   </header>
 </body>
 </html>
