--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <title>.radiance</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+    img {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
   </style>
 </head>
 <body style="background-color:black;">
